--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -77,8 +77,7 @@
     }
 
     &--2 {
-      background-image: 
-      linear-gradient(
+      background-image: linear-gradient(
           to right bottom,
           $color-primary-light,
           $color-primary-dark
@@ -87,8 +86,7 @@
     }
 
     &--3 {
-      background-image: 
-      linear-gradient(
+      background-image: linear-gradient(
           to right bottom,
           $color-tertiary-light,
           $color-tertiary-dark
