--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -21,13 +21,18 @@
     overflow: hidden;
 
     opacity: 0;
-    transform: translate(-50%, -50%) scale(.2s);
-    transition: all .4s .2s;
+    transform: translate(-50%, -50%) scale(0.2s);
+    transition: all 0.4s 0.2s;
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: table;
+      width: 100%;
+    }
   }
 
   &__right {
@@ -35,11 +40,22 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: table-cell;
+      float: left;
+      width: 50%;
+    }
   }
 
   &__text {
@@ -53,7 +69,7 @@
     -webkit-hyphens: auto;
     hyphens: auto;
   }
-  
+
   //Open states
   &:target {
     opacity: 1;
@@ -61,8 +77,8 @@
   }
 
   &:target &__content {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
 
   &__close {
