--- a/css/style.css
+++ b/css/style.css
@@ -639,6 +639,14 @@ body {
     column-rule: 1px solid #eee;
     -webkit-hyphens: auto;
     hyphens: auto; }
+    @media (max-width: 56.25em) {
+      .popup__text {
+        font-size: 1rem;
+        column-count: 1; } }
+    @media (max-width: 37.5em) {
+      .popup__text {
+        font-size: 0.6rem;
+        column-count: 1; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
