--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -23,6 +23,7 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.2s);
     transition: all 0.4s 0.2s;
+
   }
 
   &__left {
@@ -68,6 +69,16 @@
 
     -webkit-hyphens: auto;
     hyphens: auto;
+
+    @include respond(tab-port) {
+      font-size: 1rem;
+      column-count: 1;
+    }
+
+    @include respond(phone) {
+      font-size: 0.6rem;
+      column-count: 1;
+    }
   }
 
   //Open states
