--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,12 @@
   visibility: hidden;
   transition: all 0.3s;
 
+  @supports (-webkit-backdrop-filter: blur(10px))
+    or (backdrop-filter: blur(10px)) {
+  
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+  }
   &__content {
     @include center-horizontal-vertical;
 
@@ -23,7 +29,6 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.2s);
     transition: all 0.4s 0.2s;
-
   }
 
   &__left {
